--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 .books {
-    color: green;
-    background-color: red;
+    color: white;
+    background-color: blue;
 }
 
-.card {
-    background-color: blue;
+.cards {
+    background-color: green;
 }
 
 .modal {
@@ -17,8 +17,9 @@
     height: 100%; 
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.5);
-  }
-  .modal-content {
+}
+
+.modalContent {
     position: relative; 
     background-color: white;
     padding: 20px; 
@@ -28,22 +29,26 @@
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
     animation-duration: 0.4s
-  }
-  .close-btn {
+}
+
+.closeBtn {
     float: right; 
     color: lightgray; 
     font-size: 24px;  
     font-weight: bold;
     border: 1px dashed lightgray;
   
-  }
-  .close-btn:hover {
+}
+
+.closeBtn:hover {
     color: darkgray;
-  }
-  @-webkit-keyframes animatetop {
+ }
+
+ @-webkit-keyframes animatetop {
     from {top:-300px; opacity:0} 
     to {top:0; opacity:1}
   }
+
   @keyframes animatetop {
     from {top:-300px; opacity:0}
     to {top:0; opacity:1}
