--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
+:root {
+    --main-color: #4c1d95;
+    --main-backgroundColor: #ddd6fe;
+    --secondary-color: #ede9fe;
+    --secondary-backgroundColor: #5b21b6;
+}
+
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+
 .books {
     color: white;
     background-color: blue;
@@ -57,3 +72,37 @@
     from {top:-300px; opacity:0}
     to {top:0; opacity:1}
   }
+
+#header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    width: 100vw;
+
+}
+
+img {
+    height: 250px;
+}
+
+#modalBtn {
+    background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.bookForm {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    padding: 10px;
+    margin: 5px;
+}
